<resources>
    <string name="app_name">HaqddarCherity</string>
    <string name="i_need_help">I need help</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="I_want_to_help">I want to help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forgotten_your_login_details">Forgotten your login details?</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter Your Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="c_e">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="title_activity_want_onscreen" translatable="false">want_onscreen</string>
    <string name="title_activity_need" translatable="false">NeedActivity</string>
    <string name="title_posted_jobs">Posted Needs</string>
    <string name="title_account">Account</string>
    <string name="due_date">Due Date</string>
    <string name="DueDate">Due Date</string>
    <string name="totalprice">Total Price</string>
    <string name="phone">Phone number</string>
    <string name="status">Status</string>
    <string name="posted_date">Posted on</string>
    <string name="reference_id">Reference Id</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="text_image_note"><b>Note:</b> The reference number is on top left corner of the bill. To view the large view of image please click image to preview</string>
    <string name="add_a_bill_to_pay">Add a bill to pay</string>
    <string name="urdu">Urdu</string>
    <string name="english">English</string>
    <string name="login_want_account">Login</string>
    <string name="title_contact_us">Contact us</string>
    <string name="contact_us">Contact Us</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="arabic">Arabic</string>
    <string name="hindi">Hindi</string>
    <string name="pending_needs">Pending Needs</string>
    <string name="full_fill_needs">Fulfilled Needs</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full name</string>
    <string name="contact">Contact</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password">Enter the email address registered in your account and we\'ll send you a link to reset your password</string>
    <string name="phone_sample">+92 332 4547066</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_6_digit_code_we_sent_you_on_your_registered_mobile">Please enter 6 digit code we sent you on your registered mobile.</string>
    <string name="forget_password_">Forget password</string>
    <string name="due_date_">Due Date</string>
    <string name="those_who_give_out_of_their_own_possessions_by_night_and_by_day_in_private_and_in_public_will_have_their_reward_with_their_lord">“ Those who give, out of their own possessions, by night and by day, in private and in public will have their reward with their Lord.”</string>
    <string name="quran_2_274">Quran : 2:274</string>


    <string name="facebook_app_id">637953060966407</string>
    <string name="fb_login_protocol_scheme">fb637953060966407</string>
    <string name="facebook_client_token">a239712ea4a84400496fd4f0b09c8263</string>
    <string name="provider_name">Provider name</string>
    <string name="post_an_electricity_bill">Post an Electricity Bill</string>
    <string name="done">done</string>
    <string name="attach_a_link">URL of verified bill</string>
    <string name="verify"><u>Verify</u></string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="please_be_noted_that_there_is_no_guarantee_that_your_posted_bill_will_be_paid_since_many_people_are_looking_for_help_and_few_people_can_help_in_these_tough_times_therefore_keep_checking_on_your_side_if_somebody_have_helped_you_before_the_due_date_of_your_bill">Please be noted that there is no guarantee that your posted bill will be paid, since many people are looking for help and few people can help in these tough times. Therefore, keep checking on your side if somebody have helped you before the due date of your bill.</string>
    <string name="ok">OK</string>


</resources>