<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.charity.i_need_help.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/navigation_posted_jobs"
        android:name="com.example.charity.i_need_help.ui.posted_jobs.PostedNeedsFragment"
        android:label="@string/title_posted_jobs"
        tools:layout="@layout/fragment_posted_needs" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.charity.i_need_help.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_contact_us"
        android:name="com.example.charity.i_need_help.ui.contact_us.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />


    <fragment
        android:id="@+id/forget_password"
        android:name="com.example.charity.authentication.login.forgetpassword.Forget_password"
        android:label="fragment_forget_password"
        tools:layout="@layout/forget_password" >
        <action
            android:id="@+id/action_forget_password_to_verification_code2"
            app:destination="@id/verification_code2" />
    </fragment>

    <fragment
        android:id="@+id/verification_code2"
        android:name="com.example.charity.authentication.login.forgetpassword.verification_code"
        android:label="fragment_verification_code"
        tools:layout="@layout/verification_code" />


</navigation>