<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_button_color"
    tools:context="com.example.ultimatebook.authentication.login.forgetpassword.Forget_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:gravity="center"
                    android:text="@string/forget_password_"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/clicked_button"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/start_button_color"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continue_button_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/start_buttons"
                    android:text="@string/c_e"
                    android:textAllCaps="false"
                    android:textColor="@color/start_button_color" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</FrameLayout>