<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lay_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reference_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/reference_id"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reference_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Reference"
                android:textColor="@color/start_button_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_1"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/due_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/due_date"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/due_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/DueDate"
                android:textColor="@color/start_button_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_2"
            android:orientation="horizontal"
            android:weightSum="2">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TotalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/amount_to_be_paid"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="1"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TotalPrice_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Total Price"
                android:textColor="@color/start_button_color"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>